--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.6",
     "@types/three": "^0.168.0",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.5.0",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
@@ -24,7 +26,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.2",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^7.4.0",
     "three": "^0.167.1",
     "three-stdlib": "^2.32.2"
   },
@@ -43,6 +48,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1"
+    "vite": "^6.2.2"
   }
 }
