--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.6",
     "@types/three": "^0.168.0",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.5",
